--- a/ansible/roles/base/tasks/main.yaml
+++ b/ansible/roles/base/tasks/main.yaml
@@ -85,3 +85,13 @@
         append: yes
         groups:
           - docker
+
+- name: install bat
+  apt:
+    deb: https://github.com/sharkdp/bat/releases/download/v0.12.1/bat_0.12.1_amd64.deb
+
+- name: download prettyping
+  get_url:
+    url: https://raw.githubusercontent.com/denilsonsa/prettyping/master/prettyping
+    dest: /usr/local/bin/prettyping
+    mode: "0755"
