--- a/ansible/roles/zsh/tasks/main.yaml
+++ b/ansible/roles/zsh/tasks/main.yaml
@@ -91,3 +91,19 @@
     depth: 1
   become: yes
   become_user: "{{ local_username }}"
+
+- name: clone zsh-autosuggestions
+  git:
+    repo: https://github.com/zsh-users/zsh-autosuggestions 
+    dest: "${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions"
+    depth: 1
+  become: yes
+  become_user: "{{ local_username }}"
+
+- name: clone zsh-syntax-highlighting
+  git:
+    repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
+    dest: "${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting"
+    depth: 1
+  become: yes
+  become_user: "{{ local_username }}"
