Add dropbox, fix gopass

--- a/ansible/group_vars/all/base.yaml
+++ b/ansible/group_vars/all/base.yaml
@@ -14,6 +14,7 @@ base_productivity_tools:
   - libreoffice
   - doublecmd-gtk
   - doublecmd-plugins
+  - nautilus-dropbox
 
 base_system_tools:
   - gnome-tweak-tool
